# paleo-bg-sim

./: .gitignore  CMakeLists.txt  README.md  particleProduction.cc
analysis/: neutron_energydist.cpp  physics_lists.cpp  test_2025_03_07.root
analysis/schedges/: mergeTree.py  normalizePlots.ipynb  normalizePlots.py
analysis/schedges/conus/neutronFluxesRoom/: conus_bgnds_new.py
analysis/schedges/conus/neutronFluxesShielding/: plotBgnds.py
analysis/schedges/conus/nuclearRecoilsGe/: conus_bgnds.py
auxillaryCodes/muteGenerator/: genMute.py
docs/: custom_source.md  genGeomDoc.py  genMacroDoc.py  geometry_commands.md  macro_commands.md
include/: HornMagneticField.hh  MiniBooNEBeamlineActionInitialization.hh  MiniBooNEBeamlineAnalysis.hh  MiniBooNEBeamlineConstruction.hh  MiniBooNEBeamlineEventAction.hh  MiniBooNEBeamlinePrimaryGeneratorAction.hh  MiniBooNEBeamlineRunAction.hh  MiniBooNEBeamlineTrackingAction.hh  PaleoSimActionInitialization.hh  PaleoSimCmdLineParser.hh  PaleoSimDetectorConstruction.hh  PaleoSimEventAction.hh  PaleoSimGeometryMessenger.hh  PaleoSimH5OutputWriter.hh  PaleoSimMaterialManager.hh  PaleoSimMessenger.hh  PaleoSimOutputManager.hh  PaleoSimPhysicsList.hh  PaleoSimPrimaryGeneratorAction.hh  PaleoSimRootOutputWriter.hh  PaleoSimRunAction.hh  PaleoSimSteppingAction.hh  PaleoSimUserEventInformation.hh  PaleoSimVolumeDefinition.hh
include/PaleoSimPrimarySources/: PaleoSimCrySource.hh  PaleoSimDiskSource.hh  PaleoSimMeiHimeSource.hh  PaleoSimPrimarySource.hh  PaleoSimVolumetricSource.hh
macroFiles/: ambe.mac  ambe_cr.mac  conus_cry.mac  leibstadt_cry.mac  leibstadt_neutrons.mac  meiHime.mac  mute.mac  test.mac
macroFiles/geometry/: ambe.geo  ambe.mac  conus.geo  leibstadt.geo  meiHime.geo  testGeometry.mac  testGeometry.vrml
src/: .MiniBooNEBeamlinePrimaryGeneratorAction.cc.swp  HornMagneticField.cc  MiniBooNEBeamlineActionInitialization.cc  MiniBooNEBeamlineConstruction.cc  MiniBooNEBeamlineEventAction.cc  MiniBooNEBeamlinePrimaryGeneratorAction.cc  MiniBooNEBeamlineRunAction.cc  MiniBooNEBeamlineTrackingAction.cc  PaleoSimActionInitialization.cc  PaleoSimCmdLineParser.cc  PaleoSimDetectorConstruction.cc  PaleoSimEventAction.cc  PaleoSimGeometryMessenger.cc  PaleoSimH5OutputWriter.cc  PaleoSimMaterialManager.cc  PaleoSimMessenger.cc  PaleoSimOutputManager.cc  PaleoSimPhysicsList.cc  PaleoSimPrimaryGeneratorAction.cc  PaleoSimRootOutputWriter.cc  PaleoSimRunAction.cc  PaleoSimSteppingAction.cc
src/PaleoSimPrimarySources/: PaleoSimCrySource.cc  PaleoSimDiskSource.cc  PaleoSimMeiHimeSource.cc  PaleoSimPrimarySource.cc  PaleoSimVolumetricSource.cc
